fix input styling bug on ios

--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -26,6 +26,7 @@
     outline: none;
     font-weight: 400;
     font-size: small;
+    -webkit-appearance: none;
   }
 
   input:focus {
